# maru

./: .gitignore  LICENSE  README.md  daxmapping.md  docs_update.md  install.sh  pyproject.toml  resource_manager.md  resource_manager_server.md  temp_resource_manager_server_implementation.md
.ci/: test_suite.yaml
.github/: pull_request_template.md
.github/workflows/: claude-review.yml  coverage-comment.yml  docs-sphinx.yml  lint.yml  test.yml
docs/: conf.py  index.md
docs/_static/: custom.css
docs/source/api_reference/: api.md  config.md
docs/source/design_doc/: architecture_overview.md  auth_implementation_plan.md  consistency_and_safety.md  instance_auth_design.md  integration.md  kv_cache_management.md  maru_fs.md  maru_handler.md  maru_resource_manager.md  maru_server.md  marufs_kernel_module_architecture.md  memory_model.md  mtls_auth_guide.md
docs/source/getting_started/: installation.md  installation_backup.md  quick_start.md  quick_start_backup.md
docs/source/integration/: lmcache.md  nixl.md  sglang.md  vllm.md
docs/source/performance/: lmcache.md
examples/basic/: single_instance.py
examples/lmcache/disagg_prefill/: disagg_proxy_server.py
examples/lmcache/p2p_sharing/: env.sh  p2p_example.sh  p2p_vllm_launcher.sh  run_benchmark.py  run_benchmark.sh  run_simple_query.sh
examples/lmcache/single/: env.sh  run_benchmark.py  run_benchmark.sh  (+3 more)
examples/sglang/: .gitignore
examples/vllm/: README.md  env.sh  launch_vllm.sh  p2p_example.sh  run_benchmark.py  run_benchmark.sh  run_simple_query.sh
examples/vllm_direct/: README.md  run_request.py  run_test.sh
maru/: __init__.py
maru_common/: __init__.py  backend_protocol.py  config.py  ipc.py  logging_setup.py  protocol.py  resource_manager_client.py  resource_manager_installer.py  serializer.py  types.py  uds_helpers.py
maru_common/proto/: auth.proto  auth_pb2.py  auth_pb2_grpc.py
maru_handler/: __init__.py  auth_client.py  handler.py  handler_fs.py  rpc_async_client.py  rpc_client.py  rpc_client_base.py  rpc_client_mixin.py
maru_handler/memory/: __init__.py  allocator.py  mapper.py  marufs_mapper.py  owned_region_manager.py  owned_region_manager_fs.py  types.py
maru_lmcache/: __init__.py  adapter.py  allocator.py  connector.py
maru_resource_manager/: CMakeLists.txt  maru-resource-manager.service
maru_resource_manager/include/: ipc.h  ipc_serialize.h  types.h
maru_resource_manager/src/: device_header.cpp  device_header.h  log.cpp  log.h  main.cpp  pool_manager.cpp  pool_manager.h  reaper.cpp  request_handler.cpp  request_handler.h  server_config.cpp  server_config.h  tcp_server.cpp  tcp_server.h  uds_server.cpp  uds_server.h  util.cpp  util.h  wal.cpp
maru_resource_manager/tests/: test_device_header.cpp  test_pool_manager_uuid.cpp
maru_resource_manager/tools/: maru_test_client.cpp
maru_server/: __init__.py  __main__.py  allocation_manager.py  kv_manager.py  rpc_async_server.py  rpc_handler_mixin.py  rpc_server.py  server.py  stats_manager.py
maru_server/auth/: __init__.py  grpc_server.py  policy.py  region_state.py  spiffe.py
maru_sglang/: __init__.py  allocator.py  backend.py  config.py  maru_storage.py
maru_shm/: __init__.py  client.py  constants.py  device_scanner.py  ipc.py  types.py  uds_helpers.py
maru_vllm/: README.md  __init__.py  connector.py
marufs/: __init__.py  client.py  ioctl.py
marufs_kernel/: .clang-format  .gitignore  Makefile  README.md  install.sh  setup-autoload.sh  uninstall.sh
marufs_kernel/docs/: 0_user_guide.md  1_arch_metadata_layout.md  2_arch_entry_lifecycle.md  3_arch_gc.md  4_arch_nrht.md  5_arch_acl.md  6_arch_mount_io.md  7_arch_me.md
marufs_kernel/include/: marufs_uapi.h
marufs_kernel/src/: acl.c  acl.h  bootstrap.c  bootstrap.h  cache.c  cache.h  compat.h  dir.c  dir.h  file.c  file.h  gc.c  gc.h  index.c  index.h  inode.c  inode.h  marufs.h  marufs_bootstrap_layout.h  marufs_endian.h  marufs_hash.h  marufs_index_layout.h  marufs_layout.h  marufs_nrht_layout.h  marufs_rat_layout.h  marufs_superblock_layout.h  me.c  me.h  me_inline.h  me_layout.h  me_order.c  me_request.c  me_stats.h  nrht.c  nrht.h  nrht_stats.h  region.c  region.h  super.c  super.h  (+10 more)
marufs_kernel/tests/: bench_name_ref.c  dax_zero.c  monitor_me.sh  setup_local_multinode.sh  test_bootstrap_chaos.sh  test_chown_race.c  test_cross_process.c  test_dupname.c  test_gc_deleg.c  test_ioctl.c  test_local_multinode.sh  test_me_crash.sh  test_mmap.c  test_mmap_cuda.c  test_mmap_notrunc.c  test_negative.c  test_nrht_race.c  test_overlap.c  test_pid_reuse.c  test_postexec_attack.c
test_certs/: ca.cert  ca.key  ca.srl  decode.cert  decode.key  gen_test_certs.sh  policy.yaml  prefill.cert  prefill.key  server.cert  server.key
tests/: README.md  conftest.py  test_case.yaml  test_owned_region_manager_fs.py
tests/e2e/: test_auth_e2e.py
tests/integration/: test_daxmapping_flow.py  test_handler.py  test_resource_manager_lifecycle.py  test_rpc_async.py  test_rpc_sync.py
tests/lmcache/: conftest.py  test_adapter.py  test_connector.py  test_maru_backend.py  test_maru_integration.py
tests/sglang/: conftest.py  test_backend.py  test_config.py  test_integration.py
tests/unit/: conftest.py  test_allocation_manager.py  test_allocator.py  test_auth.py  test_batch_operations.py  test_cxl_memory_adapter.py  test_cxl_memory_allocator.py  test_device_scanner.py  test_handshake_devices.py  test_kv_manager.py  test_logging_setup.py  test_mapper.py  test_maru_handler.py  test_maru_server.py  test_maru_shm.py  test_marufs_client.py  test_marufs_mode.py  test_memory_types.py  test_node_register.py  test_notification.py  test_owned_region_manager.py  test_protocol.py  test_resource_manager_installer.py  test_rpc_async_client.py  test_rpc_client.py  test_rpc_handler_mixin.py  test_rpc_server.py  test_serializer.py  test_server.py  test_shm_client.py  test_shm_client_ensure_rm.py  test_shm_client_multi.py  test_stats_manager.py  test_thread_safety.py  test_usage_monitor.py  test_vllm_connector.py
tools/: README.md  maru_rm_tool.py  pool_monitor.py  stats_monitor.py  usage_monitor.py
(+43 files in other folders)
